Fixes #1463 : Custom Field values shown in elastic search are not aligned properly issue fixed

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -2509,3 +2509,6 @@ header{
 			vertical-align: top;
 		}
 }
+.right-mspace5{
+	margin-right: 5px;
+}
